Fixed align of Portfolio Items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -882,6 +882,11 @@ a:focus {
 /*******************************/
 /******** Portfolio CSS ********/
 /*******************************/
+
+.row {
+    align-items: flex-end;
+}
+
 .portfolio {
     position: relative;
     padding: 45px 0 15px 0;
